# ai-node

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.example.json  settings.json
docs/: CODEX_TASK_REPORTS.md  CODE_QUALITY_REVIEW.md  DAILY_WORK_ASSISTANT_ROADMAP.md  SYSTEM_CLI_TOOL_CALL_DESIGN.md
docs/archive/: implementation_plan.md  xx.md
docs/learning-journal/: 2026-06-17-day-1-memory-first-preview.html  2026-06-17-day-1-memory-first.md  2026-06-18-day-2-actionable-assistant-config-validate.txt  2026-06-18-day-2-actionable-assistant-cover-output.txt  2026-06-18-day-2-actionable-assistant-cover-upload-output.txt  2026-06-18-day-2-actionable-assistant-create-draft-output.txt  2026-06-18-day-2-actionable-assistant.md  (+26 more)
examples/: demo.py  demo_todos.json
scripts/: publish-wechat-local-draft.ps1  render-wechat-local-html.js
tests/: _path.py  test_agent_core_validation.py  test_architecture_layers.py  test_codex_resume_client.py  test_codex_resume_exclusions.py  test_codex_task_reports.py  test_codex_thread_resume.py  test_command_surface.py  test_llm_client.py  test_personal_assistant_features.py  test_project_layout.py  test_reactor_runtime.py  test_session_memory.py  test_settings.py  test_sqlite_repository.py  test_sync_watch.py  test_system_cli_cli.py  test_system_cli_service.py  test_system_cli_tool_call.py  test_todo_manager.py  test_tool_definitions.py  test_tool_validation.py  test_workflow_agent_tools.py  test_workflow_connectors.py  test_workflow_repository.py  test_workflow_services_cli.py  test_workflow_sync_services.py
(+171 files in other folders)
